--- a/12_Inheritance/inheritance.ipynb
+++ b/12_Inheritance/inheritance.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,12 +96,15 @@
     "    \n",
     "    @id_card.setter\n",
     "    def id_card(self, id_card):\n",
-    "        self._id_card = id_card\n"
+    "        self._id_card = id_card\n",
+    "        \n",
+    "    def __str__(self):\n",
+    "        return f\"Full name: {self._name} {self._surname}\\nAge: {self._age}\\nID Card: {self._id_card}\\n\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,52 +138,43 @@
     "    @average_mark.setter\n",
     "    def average_mark(self, average_mark):\n",
     "        self._average_mark = average_mark\n",
-    "    \n"
+    "        \n",
+    "    #overwrite __str__ in child class\n",
+    "    def __str__(self):\n",
+    "        return f\"{super().__str__()}\\nStudent info:\\n- Degree: {self._degree}\\n- Year: {self._year}\\n- Average mark: {self._average_mark}\"\n",
+    "        #super().__str__ bring the string from the parent class"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "John\n",
-      "20\n",
-      "Law\n",
-      "5.14\n",
-      "Year 4\n",
-      "Smith\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Create an instance of Student\n",
-    "student01 = Student(\"John\", \"Doe\", 20, 12345678, \"Law\", 3, 4.14)\n",
+    "# # Create an instance of Student\n",
+    "# student01 = Student(\"John\", \"Doe\", 20, 12345678, \"Law\", 3, 4.14)\n",
     "\n",
-    "# Access properties inherited from Person\n",
-    "print(student01.name)  # Displays \"John\"\n",
-    "print(student01.age)   # Displays 20\n",
+    "# # Access properties inherited from Person\n",
+    "# print(student01.name)  # Displays \"John\"\n",
+    "# print(student01.age)   # Displays 20\n",
     "\n",
-    "# Access specific properties of Student\n",
-    "print(student01.degree)       # Displays \"Law\"\n",
-    "student01.average_mark += 1   #modify the value of average mark\n",
-    "print(student01.average_mark) # Displays 4.14\n",
+    "# # Access specific properties of Student\n",
+    "# print(student01.degree)       # Displays \"Law\"\n",
+    "# student01.average_mark += 1   #modify the value of average mark\n",
+    "# print(student01.average_mark) # Displays 4.14\n",
     "\n",
-    "# Modify properties\n",
-    "student01.year = 4\n",
-    "student01.surname = \"Smith\"\n",
+    "# # Modify properties\n",
+    "# student01.year = 4\n",
+    "# student01.surname = \"Smith\"\n",
     "\n",
-    "# Verify the changes\n",
-    "print(\"Year:\", student01.year)    # Displays 4\n",
-    "print(student01.surname) # Displays \"Smith\"\n"
+    "# # Verify the changes\n",
+    "# print(\"Year:\", student01.year)    # Displays 4\n",
+    "# print(student01.surname) # Displays \"Smith\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,8 +198,20 @@
     "    \n",
     "    @salary.setter\n",
     "    def salary(self, salary):\n",
-    "        self._salary = salary"
+    "        self._salary = salary\n",
+    "    \n",
+    "    #overwrite __str__ in child class\n",
+    "    def __str__(self):\n",
+    "        return f\"{super().__str__()}\\nTeacher info:\\n- Title: {self._title}\\n- Salary: {self._salary}\\n\"\n",
+    "        #super().__str__ bring the string from the parent class"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
