--- a/13_Multiple_inheritance/Color.ipynb
+++ b/13_Multiple_inheritance/Color.ipynb
@@ -8,8 +8,10 @@
    "source": [
     "class Color:\n",
     "    def __init__(self, color):\n",
-    "        self._color = color\n",
-    "        \n",
+    "        if type(color) == str:\n",
+    "            self._color = (color)\n",
+    "        else:\n",
+    "            self._color = \"Black\"\n",
     "    @property\n",
     "    def color(self):\n",
     "        return self._color\n",
@@ -19,7 +21,14 @@
     "        self._color = color\n",
     "        \n",
     "    def __str__(self):\n",
-    "        return f\"The color is {self._color.lower()}.\""
+    "        if type(self._color) == str:\n",
+    "            return f\"The color is {self._color.lower()}.\"\n",
+    "        else:\n",
+    "            return \"Invalid color.\"\n",
+    "    \n",
+    "    def _value_validation(self, value):\n",
+    "        \n",
+    "        return True if type(value) == str else False"
    ]
   },
   {
