--- a/13_Multiple_inheritance/GeometricFigure.ipynb
+++ b/13_Multiple_inheritance/GeometricFigure.ipynb
@@ -8,8 +8,18 @@
    "source": [
     "class GeometricFigure:\n",
     "    def __init__(self, width, height):\n",
-    "        self._width = width\n",
-    "        self._height = height\n",
+    "        \n",
+    "        if self._value_validation(width):\n",
+    "            self._width = width\n",
+    "        else:\n",
+    "            self._width = 1\n",
+    "            print(\"Wrong width value\")\n",
+    "            \n",
+    "        if self._value_validation(height):\n",
+    "            self._height = height\n",
+    "        else:\n",
+    "            self._height = 1\n",
+    "            print(\"Wrong height value\")\n",
     "    \n",
     "    @property\n",
     "    def width(self):\n",
@@ -28,7 +38,12 @@
     "        self._height = height\n",
     "        \n",
     "    def __str__(self):\n",
-    "        return f\"Your figure is width {self._width} x height {self._height}.\""
+    "        return f\"Your figure is width {self._width} x height {self._height}.\"\n",
+    "    \n",
+    "    #validating set method\n",
+    "    #this is an encapsulated method\n",
+    "    def _value_validation(self, value):\n",
+    "        return True if value > 0 else False"
    ]
   },
   {
