Class variables and methods

--- a/14_Abstract_classes/test_abstract_classes.ipynb
+++ b/14_Abstract_classes/test_abstract_classes.ipynb
@@ -134,13 +134,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`<class 'abc.ABC'>` goes after `GeometricFigure` since that classes inherits from ABC"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "`<class 'abc.ABC'>` goes after `GeometricFigure` since that classes inheri"
-   ]
+   "source": []
   }
  ],
  "metadata": {
