Umbrella project - On Hold

--- a/Project_McCulloch-Pitts_neuron/Rain.ipynb
+++ b/Project_McCulloch-Pitts_neuron/Rain.ipynb
@@ -6,54 +6,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Rain: # RainProbability\n",
-    "    rain_prediction_weight = 0.5\n",
-    "    clouds_weight = 0.3\n",
-    "    wind_weight = 0.1\n",
-    "    high_humidity_weight = 0.1\n",
+    "%run Weather.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Rain(Weather): \n",
     "    \n",
-    "    threshold = 0.75    \n",
+    "    #class methods for weight are automatically inherited from Weather parent class\n",
     "    \n",
-    "    def __init__(self, rain_prediction, clouds, wind, high_humidity):\n",
-    "        self._rain_prediction = rain_prediction\n",
-    "        self._clouds = clouds\n",
-    "        self._wind = wind\n",
-    "        self._high_humidity = high_humidity\n",
+    "    def __init__(self, prediction, clouds, wind, high_humidity):\n",
+    "        super().__init__(prediction, clouds, wind, high_humidity)\n",
     "        \n",
-    "    @property\n",
-    "    def rain_prediction(self):\n",
-    "        return self._rain_prediction\n",
-    "    \n",
-    "    @rain_prediction.setter\n",
-    "    def rain_prediction(self, value):\n",
-    "        self._rain_prediction = value\n",
-    "        \n",
-    "    @property\n",
-    "    def clouds(self):\n",
-    "        return self._clouds\n",
-    "    \n",
-    "    @clouds.setter\n",
-    "    def clouds(self, value):\n",
-    "        self._clouds = value\n",
-    "        \n",
-    "    @property\n",
-    "    def wind(self):\n",
-    "        return self._wind\n",
-    "    \n",
-    "    @wind.setter\n",
-    "    def wind(self, value):\n",
-    "        self._wind = value\n",
-    "        \n",
-    "    @property\n",
-    "    def high_humidity(self):\n",
-    "        return self._high_humidity\n",
-    "    \n",
-    "    @high_humidity.setter\n",
-    "    def high_humidity(self, value):\n",
-    "        self._high_humidity = value\n",
+    "    #Get and set methods defined in the parent class\n",
     "        \n",
     "    def calculate_n(self):\n",
-    "        n = (self._rain_prediction * self.rain_prediction_weight) + \\\n",
+    "        n = (self._prediction * self.prediction_weight) + \\\n",
     "            (self._clouds * self.clouds_weight) + \\\n",
     "            (self._wind * self.wind_weight) + \\\n",
     "            (self._high_humidity * self.high_humidity_weight)\n",
@@ -78,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,35 +59,6 @@
     "rain_neuron03 = Rain(0,1,0,0)\n",
     "rain_neuron04 = Rain(0,0,1,1)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "0\n",
-      "0\n",
-      "0\n"
-     ]
-    }
-   ],
-   "source": [
-    "neurons = [rain_neuron01, rain_neuron02, rain_neuron03, rain_neuron04]\n",
-    "for neuron in neurons:\n",
-    "    print(neuron.calculate_a())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
