Static class context

--- a/15_Static_class_context/StaticClassContext.ipynb
+++ b/15_Static_class_context/StaticClassContext.ipynb
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -200,13 +200,30 @@
     "    ## static methods\n",
     "    @classmethod\n",
     "    def class_method(cls):\n",
-    "        print(cls.class_variable)\n",
-    "    \n",
+    "        print(cls.class_variable)    \n",
     "        \n",
     "    def __str__(self):\n",
     "        return f\"Printing... {self._variable}\"\n",
     "    \n",
     "ClassTwo.class_method()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "object01 = ClassTwo(\"Instance variable\")\n",
+    "object01.class_method()"
    ]
   },
   {
