--- a/16_Class_design/Shopping test.ipynb
+++ b/16_Class_design/Shopping test.ipynb
@@ -46,37 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Order ID: 3996\n",
-      "\n",
-      "Products:\n",
-      "Product: 35269 - Socks\n",
-      "Price: 15 USD \n",
-      "\n",
-      "Product: 71308 - T-Shirt\n",
-      "Price: 30 USD \n",
-      "\n",
-      "Product: 13819 - Watch\n",
-      "Price: 100 USD \n",
-      "\n",
-      "\n",
-      "Total amount: 145 USD\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(order02)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -104,16 +74,45 @@
     }
    ],
    "source": [
-    "order02.add_product(product05)\n",
     "print(order02)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Order ID: 3996\n",
+      "\n",
+      "Products:\n",
+      "Product: 35269 - Socks\n",
+      "Price: 15 USD \n",
+      "\n",
+      "Product: 71308 - T-Shirt\n",
+      "Price: 30 USD \n",
+      "\n",
+      "Product: 13819 - Watch\n",
+      "Price: 100 USD \n",
+      "\n",
+      "Product: 91556 - Sunglasses\n",
+      "Price: 40 USD \n",
+      "\n",
+      "Product: 91556 - Sunglasses\n",
+      "Price: 40 USD \n",
+      "\n",
+      "\n",
+      "Total amount: 225 USD\n"
+     ]
+    }
+   ],
+   "source": [
+    "order02.add_product(product05)\n",
+    "print(order02)"
+   ]
   }
  ],
  "metadata": {
