--- a/19_Project_PCWorld/Order.ipynb
+++ b/19_Project_PCWorld/Order.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,12 +21,11 @@
     "\n",
     "    assigned_ids = set()\n",
     "    counter_orders = 0\n",
-    "    computers = list()\n",
     "\n",
     "    def __init__(self, computers):\n",
     "        Order.counter_orders += 1\n",
     "        self._id_order = self._generate_unique_id()\n",
-    "        self._computers = computer\n",
+    "        self._computers = computers\n",
     "        \n",
     "        ## computers.append(computer)\n",
     "\n",
@@ -45,13 +44,14 @@
     "        for computer in self._computers:\n",
     "            computer_str += computer.__str__()\n",
     "        return f\"\"\"\n",
-    "Order: {self._id_order}\n",
+    "Order: {self._id_order}:\n",
+    "···············\n",
     "{computer_str}\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,24 +77,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'computer' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[27], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m order01 \u001b[38;5;241m=\u001b[39m \u001b[43mOrder\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcomputer01\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcomputer02\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(order01)\n",
-      "Cell \u001b[1;32mIn[24], line 12\u001b[0m, in \u001b[0;36mOrder.__init__\u001b[1;34m(self, *computers)\u001b[0m\n\u001b[0;32m     10\u001b[0m Order\u001b[38;5;241m.\u001b[39mcounter_orders \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_id_order \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_generate_unique_id()\n\u001b[1;32m---> 12\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_computers \u001b[38;5;241m=\u001b[39m \u001b[43mcomputer\u001b[49m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'computer' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Order: 22116:\n",
+      "···············\n",
+      "\n",
+      "Computer Apple WFH - ID: 46233:\n",
+      "    \n",
+      "Monitor 2 - ID: 70560\n",
+      "· Brand: Apple Display\n",
+      "· Size: 28\n",
+      "    \n",
+      "Keyboard 2 - ID: 91933\n",
+      "· Model: Apple Key\n",
+      "· Type: Bluetooth\n",
+      "· Brand: Apple\n",
+      "    \n",
+      "Mouse 2 - ID: 41920\n",
+      "· Model: Apple Arrow\n",
+      "· Type: Bluetooth\n",
+      "· Brand: Apple\n",
+      "------------------------\n",
+      "\n",
+      "Computer Acer - ID: 10975:\n",
+      "    \n",
+      "Monitor 2 - ID: 30969\n",
+      "· Brand: Acer\n",
+      "· Size: 32\n",
+      "    \n",
+      "Keyboard 2 - ID: 19180\n",
+      "· Model: A99\n",
+      "· Type: Bluetooth\n",
+      "· Brand: Acer\n",
+      "    \n",
+      "Mouse 2 - ID: 10757\n",
+      "· Model: K50\n",
+      "· Type: Bluetooth\n",
+      "· Brand: Acer\n",
+      "------------------------\n",
+      "\n",
+      "Computer Acer - ID: 10975:\n",
+      "    \n",
+      "Monitor 2 - ID: 30969\n",
+      "· Brand: Acer\n",
+      "· Size: 32\n",
+      "    \n",
+      "Keyboard 2 - ID: 19180\n",
+      "· Model: A99\n",
+      "· Type: Bluetooth\n",
+      "· Brand: Acer\n",
+      "    \n",
+      "Mouse 2 - ID: 10757\n",
+      "· Model: K50\n",
+      "· Type: Bluetooth\n",
+      "· Brand: Acer\n",
+      "------------------------\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "order01 = Order(computer01, computer02)\n",
+    "computers = [computer01, computer02]\n",
+    "\n",
+    "order01 = Order(computers)\n",
     "print(order01)"
    ]
   },
@@ -103,7 +154,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "monitor03 = Monitor(\"Acer\", 32)\n",
+    "keyboard03 = Keyboard(\"USB\", \"LG\", \"LG speeeeed\")\n",
+    "mouse03 = Mouse(\"USB\", \"LG\", \"LG-ACB\")\n",
+    "\n",
+    "computer03 = Computer(\"Acer\", monitor02, keyboard02, mouse02)"
+   ]
   }
  ],
  "metadata": {
