--- a/19_Project_PCWorld/Order.ipynb
+++ b/19_Project_PCWorld/Order.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Order: 22116:\n",
+      "Order: 39901:\n",
       "···············\n",
       "\n",
       "Computer Apple WFH - ID: 46233:\n",
@@ -121,23 +121,6 @@
       "· Type: Bluetooth\n",
       "· Brand: Acer\n",
       "------------------------\n",
-      "\n",
-      "Computer Acer - ID: 10975:\n",
-      "    \n",
-      "Monitor 2 - ID: 30969\n",
-      "· Brand: Acer\n",
-      "· Size: 32\n",
-      "    \n",
-      "Keyboard 2 - ID: 19180\n",
-      "· Model: A99\n",
-      "· Type: Bluetooth\n",
-      "· Brand: Acer\n",
-      "    \n",
-      "Mouse 2 - ID: 10757\n",
-      "· Model: K50\n",
-      "· Type: Bluetooth\n",
-      "· Brand: Acer\n",
-      "------------------------\n",
       "\n"
      ]
     }
@@ -151,16 +134,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "monitor03 = Monitor(\"Acer\", 32)\n",
+    "monitor03 = Monitor(\"LG\", 32)\n",
     "keyboard03 = Keyboard(\"USB\", \"LG\", \"LG speeeeed\")\n",
     "mouse03 = Mouse(\"USB\", \"LG\", \"LG-ACB\")\n",
     "\n",
-    "computer03 = Computer(\"Acer\", monitor02, keyboard02, mouse02)"
+    "computer03 = Computer(\"LG\", monitor02, keyboard02, mouse02)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Order: 39901:\n",
+      "···············\n",
+      "\n",
+      "Computer Apple WFH - ID: 46233:\n",
+      "    \n",
+      "Monitor 3 - ID: 70560\n",
+      "· Brand: Apple Display\n",
+      "· Size: 28\n",
+      "    \n",
+      "Keyboard 3 - ID: 91933\n",
+      "· Model: Apple Key\n",
+      "· Type: Bluetooth\n",
+      "· Brand: Apple\n",
+      "    \n",
+      "Mouse 3 - ID: 41920\n",
+      "· Model: Apple Arrow\n",
+      "· Type: Bluetooth\n",
+      "· Brand: Apple\n",
+      "------------------------\n",
+      "\n",
+      "Computer Acer - ID: 10975:\n",
+      "    \n",
+      "Monitor 3 - ID: 30969\n",
+      "· Brand: Acer\n",
+      "· Size: 32\n",
+      "    \n",
+      "Keyboard 3 - ID: 19180\n",
+      "· Model: A99\n",
+      "· Type: Bluetooth\n",
+      "· Brand: Acer\n",
+      "    \n",
+      "Mouse 3 - ID: 10757\n",
+      "· Model: K50\n",
+      "· Type: Bluetooth\n",
+      "· Brand: Acer\n",
+      "------------------------\n",
+      "\n",
+      "Computer LG - ID: 79762:\n",
+      "    \n",
+      "Monitor 3 - ID: 30969\n",
+      "· Brand: Acer\n",
+      "· Size: 32\n",
+      "    \n",
+      "Keyboard 3 - ID: 19180\n",
+      "· Model: A99\n",
+      "· Type: Bluetooth\n",
+      "· Brand: Acer\n",
+      "    \n",
+      "Mouse 3 - ID: 10757\n",
+      "· Model: K50\n",
+      "· Type: Bluetooth\n",
+      "· Brand: Acer\n",
+      "------------------------\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "order01.add_computer(computer03)\n",
+    "print(order01)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
