--- a/20_Exception_handling/Exception handling.ipynb
+++ b/20_Exception_handling/Exception handling.ipynb
@@ -40,18 +40,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "There is an error: unsupported operand type(s) for /: 'str' and 'int'\n",
-      "None\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "result = None\n",
     "a = \"10\"\n",
@@ -67,16 +58,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "NAME 'C' IS NOT DEFINED \n",
-      "There is an error: name 'c' is not defined\n",
-      "None\n"
+     "ename": "NameError",
+     "evalue": "name 'c' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m a \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m10\u001b[39m\n\u001b[1;32m----> 2\u001b[0m b \u001b[38;5;241m=\u001b[39m \u001b[43mc\u001b[49m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m      5\u001b[0m     result \u001b[38;5;241m=\u001b[39m a \u001b[38;5;241m/\u001b[39m c\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'c' is not defined"
      ]
     }
    ],
@@ -127,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +138,7 @@
      "text": [
       "First number: 9\n",
       "Second number: 9\n",
-      "TypeError - An error occurred: __str__() missing 1 required positional argument: 'self', <class 'TypeError'>\n",
+      "TypeError - An error occurred: __init__() takes 1 positional argument but 2 were given, <class 'TypeError'>\n",
       "Continuing...\n"
      ]
     }
@@ -155,7 +148,7 @@
     "    a = int(input('First number: '))\n",
     "    b = int(input('Second number: '))\n",
     "    if a == b:\n",
-    "        raise SameNumber.__str__()\n",
+    "        raise SameNumber(\"SameNumbersError\")\n",
     "    result = a // b\n",
     "\n",
     "except ZeroDivisionError as e:\n",
