--- a/24_postgresql/test_db.ipynb
+++ b/24_postgresql/test_db.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -39,14 +39,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<connection object at 0x0000024330A5CE10; dsn: 'user=postgres password=xxx dbname=test_db host=127.0.0.1', closed: 0>\n"
+      "<connection object at 0x000001197FDFB150; dsn: 'user=postgres password=xxx dbname=test_db host=127.0.0.1', closed: 0>\n"
      ]
     }
    ],
@@ -56,16 +56,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1, 'John', 'McDillan', 'jmcdillan@email.com')\n",
-      "(3, 'Mary', 'Rashford', 'mrashford@email.com')\n",
-      "(4, 'Andrew', 'Bills', 'abills@email.com')\n"
+      "Select ids: 9,10\n",
+      "('Margaret', 'Buchanan', 'margaretbuchanan@example.com')\n",
+      "('Sophia', 'Moody', 'sophiamoody@example.com')\n"
      ]
     }
    ],
@@ -75,10 +75,18 @@
     "    with conn:\n",
     "        with conn.cursor() as cursor: #this will close the cursor autmatically\n",
     "            cursor = conn.cursor()\n",
-    "            sentence = \"SELECT * FROM person\"\n",
-    "            cursor.execute(sentence)\n",
+    "            sentence01 = \"SELECT name, surname, email FROM person WHERE id_person = %s\"\n",
+    "            sentence02 = \"SELECT name, surname, email FROM person WHERE id_person IN %s\"\n",
+    "            \n",
+    "            primary_keys = input(\"Select ids: \") #or ((1,4,3),)\n",
+    "            tuple_primary_keys = (tuple(primary_keys.split(\",\")),)\n",
     "\n",
-    "            registers = cursor.fetchall() #type is a list of tuples\n",
+    "            # id_person = input(\"Select id: \")  # use with  sentence01\n",
+    "            # cursor.execute(sentence01, (id_person,)) # use with  sentence01\n",
+    "            cursor.execute(sentence02, tuple_primary_keys)\n",
+    "                           \n",
+    "            registers = cursor.fetchall() #type is a list of tuples \n",
+    "            register = cursor.fetchone() #use fetchone() too for returning just one row\n",
     "\n",
     "            for r in registers:\n",
     "                print(r)\n",
@@ -91,8 +99,15 @@
     "\n",
     "#always needed:\n",
     "finally:\n",
-    "    conn.close()"
+    "     conn.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
