--- a/24_postgresql/test_db.ipynb
+++ b/24_postgresql/test_db.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -39,60 +39,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<connection object at 0x000001197FDFB150; dsn: 'user=postgres password=xxx dbname=test_db host=127.0.0.1', closed: 0>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(conn)"
+    "# #to use SQL here\n",
+    "# try:\n",
+    "#     with conn:\n",
+    "#         with conn.cursor() as cursor: #this will close the cursor autmatically\n",
+    "#             cursor = conn.cursor()\n",
+    "#             sentence01 = \"SELECT name, surname, email FROM person WHERE id_person = %s\"\n",
+    "#             sentence02 = \"SELECT name, surname, email FROM person WHERE id_person IN %s\"\n",
+    "            \n",
+    "#             primary_keys = input(\"Select ids: \") #or ((1,4,3),)\n",
+    "#             tuple_primary_keys = (tuple(primary_keys.split(\",\")),)\n",
+    "\n",
+    "#             # id_person = input(\"Select id: \")  # use with  sentence01\n",
+    "#             # cursor.execute(sentence01, (id_person,)) # use with  sentence01\n",
+    "#             cursor.execute(sentence02, tuple_primary_keys)\n",
+    "                           \n",
+    "#             registers = cursor.fetchall() #type is a list of tuples \n",
+    "#             register = cursor.fetchone() #use fetchone() too for returning just one row\n",
+    "\n",
+    "#             for r in registers:\n",
+    "#                 print(r)\n",
+    "\n",
+    "#             #close connection\n",
+    "#             # cursor.close() not need due to line 3\n",
+    "            \n",
+    "# except Exception as e:\n",
+    "#     print(\"Error:\", e)\n",
+    "\n",
+    "# #always needed:\n",
+    "# finally:\n",
+    "#      conn.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Select ids: 9,10\n",
-      "('Margaret', 'Buchanan', 'margaretbuchanan@example.com')\n",
-      "('Sophia', 'Moody', 'sophiamoody@example.com')\n"
+      "Inserted resgister: 1\n"
      ]
     }
    ],
    "source": [
-    "#to use SQL here\n",
+    "#add register\n",
     "try:\n",
     "    with conn:\n",
-    "        with conn.cursor() as cursor: #this will close the cursor autmatically\n",
-    "            cursor = conn.cursor()\n",
-    "            sentence01 = \"SELECT name, surname, email FROM person WHERE id_person = %s\"\n",
-    "            sentence02 = \"SELECT name, surname, email FROM person WHERE id_person IN %s\"\n",
+    "        with conn.cursor() as cursor:\n",
+    "            sentence = \"INSERT INTO person(name, surname, email) VALUES(%s, %s, %s)\"\n",
     "            \n",
-    "            primary_keys = input(\"Select ids: \") #or ((1,4,3),)\n",
-    "            tuple_primary_keys = (tuple(primary_keys.split(\",\")),)\n",
-    "\n",
-    "            # id_person = input(\"Select id: \")  # use with  sentence01\n",
-    "            # cursor.execute(sentence01, (id_person,)) # use with  sentence01\n",
-    "            cursor.execute(sentence02, tuple_primary_keys)\n",
-    "                           \n",
-    "            registers = cursor.fetchall() #type is a list of tuples \n",
-    "            register = cursor.fetchone() #use fetchone() too for returning just one row\n",
-    "\n",
-    "            for r in registers:\n",
-    "                print(r)\n",
-    "\n",
-    "            #close connection\n",
-    "            # cursor.close() not need due to line 3\n",
+    "            new_members = [(\"Charly\", \"Lamp\", \"clamp00@outlook.com\"), (\"Nieves\", \"Bellingham\", \"nbellingham@gmail.com\"), (\"Russel\", \"Crowd\", \"r_crowd@mail.com\")]\n",
+    "            for member in new_members:\n",
+    "                values = member\n",
+    "                cursor.execute(sentence, values)\n",
+    "            \n",
+    "            # when modifying info like when using INSERT, save the changes with\n",
+    "            # if we do it in a with code block, it will be automatically done\n",
+    "            # conn.commit()\n",
+    "            \n",
+    "            inserted_registers = cursor.rowcount\n",
+    "            \n",
+    "            print(f\"Inserted resgister: {inserted_registers}\")\n",
     "            \n",
     "except Exception as e:\n",
     "    print(\"Error:\", e)\n",
@@ -107,14 +128,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#do the same with executemany"
+   ]
   }
  ],
  "metadata": {
