--- a/24_postgresql/test_db.ipynb
+++ b/24_postgresql/test_db.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,43 +77,256 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# #add register\n",
+    "# try:\n",
+    "#     with conn:\n",
+    "#         with conn.cursor() as cursor:\n",
+    "#             sentence = \"INSERT INTO person(name, surname, email) VALUES(%s, %s, %s)\"\n",
+    "            \n",
+    "#             new_members = [(\"Charly\", \"Lamp\", \"clamp00@outlook.com\"), (\"Nieves\", \"Bellingham\", \"nbellingham@gmail.com\"), (\"Russel\", \"Crowd\", \"r_crowd@mail.com\")]\n",
+    "#             for member in new_members:\n",
+    "#                 values = member\n",
+    "#                 cursor.execute(sentence, values)\n",
+    "            \n",
+    "#             # when modifying info like when using INSERT, save the changes with\n",
+    "#             # if we do it in a with code block, it will be automatically done\n",
+    "#             # conn.commit()\n",
+    "            \n",
+    "#             inserted_registers = cursor.rowcount\n",
+    "            \n",
+    "#             print(f\"Inserted resgister: {inserted_registers}\")\n",
+    "            \n",
+    "# except Exception as e:\n",
+    "#     print(\"Error:\", e)\n",
+    "\n",
+    "# #always needed:\n",
+    "# finally:\n",
+    "#      conn.close()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# #do the same with executemany\n",
+    "\n",
+    "# #add register\n",
+    "# try:\n",
+    "#     with conn:\n",
+    "#         with conn.cursor() as cursor:\n",
+    "#             sentence = \"INSERT INTO person(name, surname, email) VALUES(%s, %s, %s)\"\n",
+    "            \n",
+    "#             values = (\n",
+    "#                     (\"Mark\", \"Polo\", \"mpolooutlook.com\"),\n",
+    "#                     (\"Niem\", \"Bell\", \"nbell@email.com\"),\n",
+    "#                     (\"Rustie\", \"Crope\", \"rcrope@gmail.com\")\n",
+    "#                 )\n",
+    "            \n",
+    "#             cursor.executemany(sentence, values)\n",
+    "            \n",
+    "#             inserted_registers = cursor.rowcount\n",
+    "            \n",
+    "#             print(f\"Inserted resgister: {inserted_registers}\")\n",
+    "            \n",
+    "# except Exception as e:\n",
+    "#     print(\"Error:\", e)\n",
+    "\n",
+    "# #always needed:\n",
+    "# finally:\n",
+    "#      conn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# #update one register\n",
+    "\n",
+    "# try:\n",
+    "#     with conn:\n",
+    "#         with conn.cursor() as cursor:\n",
+    "#             sentence = \"UPDATE person SET name = %s, surname=%s, email=%s WHERE id_person = %s\"\n",
+    "            \n",
+    "#             values = ('Cumins', \"Bee\", 'cbee@gmail.com', 17)\n",
+    "            \n",
+    "#             cursor.execute(sentence, values)\n",
+    "            \n",
+    "#             updated_registers = cursor.rowcount\n",
+    "            \n",
+    "#             print(f\"Updated register: {updated_registers}\")\n",
+    "            \n",
+    "# except Exception as e:\n",
+    "#     print(\"Error:\", e)\n",
+    "\n",
+    "# #always needed:\n",
+    "# finally:\n",
+    "#      conn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # update various registers\n",
+    "\n",
+    "# try:\n",
+    "#     with conn:\n",
+    "#         with conn.cursor() as cursor:\n",
+    "#             sentence = \"UPDATE person SET name = %s, surname=%s, email=%s WHERE id_person = %s\"\n",
+    "            \n",
+    "#             values = (('Peter', \"Lee\", 'plee@outlook.com', 18), ('Mathew', 'Bootles', 'mbootles@mail.com', 24))\n",
+    "            \n",
+    "#             cursor.executemany(sentence, values)\n",
+    "            \n",
+    "#             updated_register = cursor.rowcount\n",
+    "            \n",
+    "#             print(f\"Updated register: {updated_register}\")\n",
+    "            \n",
+    "# except Exception as e:\n",
+    "#     print(\"Error:\", e)\n",
+    "\n",
+    "# #always needed:\n",
+    "# finally:\n",
+    "#      conn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Global variable to keep track of the email domain index\n",
+    "email_domain_index = 0\n",
+    "\n",
+    "def create_email(name, surname):\n",
+    "    global email_domain_index\n",
+    "\n",
+    "    # Splitting the name to handle multiple names\n",
+    "    name_parts = name.split(\" \")\n",
+    "\n",
+    "    # Getting the initials\n",
+    "    initials = ''.join([n[0] for n in name_parts[:2]]).lower()\n",
+    "\n",
+    "    # Lowercasing the surname\n",
+    "    surname = surname.lower()\n",
+    "\n",
+    "    # List of possible email domains\n",
+    "    email_domains = [\"@gmail.com\", \"@outlook.com\", \"@email.com\", \"@yahoo.com\"]\n",
+    "\n",
+    "    # Forming the email\n",
+    "    email = initials + surname + email_domains[email_domain_index]\n",
+    "\n",
+    "    # Cycling through the email domains\n",
+    "    email_domain_index = (email_domain_index + 1) % len(email_domains)\n",
+    "\n",
+    "    return email"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Assuming the create_email function is already defined\n",
+    "\n",
+    "# name = 'Luck'\n",
+    "# surname = 'McDillan'\n",
+    "# index = 22\n",
+    "\n",
+    "# try:\n",
+    "#     with conn:\n",
+    "#         with conn.cursor() as cursor:\n",
+    "#             # Generating email using the name and surname\n",
+    "#             generated_email = create_email(name, surname)\n",
+    "\n",
+    "#             # Creating the value tuple with name, surname, generated email, and id_person\n",
+    "#             value = (name, surname, generated_email, index)\n",
+    "\n",
+    "#             sentence = \"UPDATE person SET name = %s, surname=%s, email=%s WHERE id_person = %s\"\n",
+    "            \n",
+    "#             cursor.execute(sentence, value)\n",
+    "            \n",
+    "#             updated_register = cursor.rowcount\n",
+    "            \n",
+    "#             print(f\"Updated register: {updated_register}\")\n",
+    "            \n",
+    "# except Exception as e:\n",
+    "#     print(\"Error:\", e)\n",
+    "\n",
+    "# # Always needed:\n",
+    "# finally:\n",
+    "#     conn.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#delete one register registers\n",
+    "\n",
+    "# try:\n",
+    "#     with conn:\n",
+    "#         with conn.cursor() as cursor:\n",
+    "#             sentence = \"DELETE FROM person WHERE id_person = %s\"\n",
+    "            \n",
+    "#             value = (19,)\n",
+    "            \n",
+    "#             cursor.execute(sentence, value)\n",
+    "            \n",
+    "#             deleted_register = cursor.rowcount\n",
+    "            \n",
+    "#             print(f\"Deleted register: {deleted_register}\")\n",
+    "            \n",
+    "# except Exception as e:\n",
+    "#     print(\"Error:\", e)\n",
+    "\n",
+    "# #always needed:\n",
+    "# finally:\n",
+    "#      conn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Inserted resgister: 1\n"
+      "Deleted registers: 4\n"
      ]
     }
    ],
    "source": [
-    "#add register\n",
+    "#delete various registers\n",
+    "\n",
     "try:\n",
     "    with conn:\n",
     "        with conn.cursor() as cursor:\n",
-    "            sentence = \"INSERT INTO person(name, surname, email) VALUES(%s, %s, %s)\"\n",
+    "            sentence = \"DELETE FROM person WHERE id_person IN %s\"\n",
     "            \n",
-    "            new_members = [(\"Charly\", \"Lamp\", \"clamp00@outlook.com\"), (\"Nieves\", \"Bellingham\", \"nbellingham@gmail.com\"), (\"Russel\", \"Crowd\", \"r_crowd@mail.com\")]\n",
-    "            for member in new_members:\n",
-    "                values = member\n",
-    "                cursor.execute(sentence, values)\n",
+    "            values = ((1, 3, 4, 5),)\n",
     "            \n",
-    "            # when modifying info like when using INSERT, save the changes with\n",
-    "            # if we do it in a with code block, it will be automatically done\n",
-    "            # conn.commit()\n",
+    "            cursor.execute(sentence, values)\n",
     "            \n",
-    "            inserted_registers = cursor.rowcount\n",
+    "            deleted_registers = cursor.rowcount\n",
     "            \n",
-    "            print(f\"Inserted resgister: {inserted_registers}\")\n",
+    "            print(f\"Deleted registers: {deleted_registers}\")\n",
     "            \n",
     "except Exception as e:\n",
     "    print(\"Error:\", e)\n",
@@ -121,15 +334,6 @@
     "#always needed:\n",
     "finally:\n",
     "     conn.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#do the same with executemany"
    ]
   }
  ],
